maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  while(!estSUrBiscuit){
    random3()
  }
}